Cleaned up the project structure.

--- a/PlayGround/PlayGround/Base.lproj/Main.storyboard
+++ b/PlayGround/PlayGround/Base.lproj/Main.storyboard
@@ -7,10 +7,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--First-->
+        <!--XibViewController-->
         <scene sceneID="hNz-n2-bh7">
             <objects>
-                <viewController id="9pv-A4-QxB" customClass="FirstViewController" customModule="PlayGround" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="XibViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="9pv-A4-QxB" userLabel="XibViewController" customClass="XibViewController" customModule="PlayGround" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="tsR-hK-woN">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -43,7 +43,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="W5J-7L-Pyd" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="750" y="-320"/>
+            <point key="canvasLocation" x="4200" y="392"/>
         </scene>
         <!--Index Controller-->
         <scene sceneID="EGd-QC-8Hf">
@@ -91,7 +91,7 @@
         <!--TableViewPlayground-->
         <scene sceneID="wg7-f3-ORb">
             <objects>
-                <viewController storyboardIdentifier="tableviewPlayground" useStoryboardIdentifierAsRestorationIdentifier="YES" id="8rJ-Kc-sve" userLabel="TableViewPlayground" customClass="TableViewController" customModule="PlayGround" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="TableviewPlayground" useStoryboardIdentifierAsRestorationIdentifier="YES" id="8rJ-Kc-sve" userLabel="TableViewPlayground" customClass="TableViewController" customModule="PlayGround" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="9QF-Dr-lmD">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -118,23 +118,23 @@
                                 </tableViewCellContentView>
                             </tableViewCell>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="reuseIdentifier2" id="grz-GA-ACf">
-                                <rect key="frame" x="0.0" y="128" width="414" height="21.5"/>
+                                <rect key="frame" x="0.0" y="128" width="414" height="21"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="grz-GA-ACf" id="9fK-oK-enZ">
-                                    <rect key="frame" x="0.0" y="0.0" width="414" height="21.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="21"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DAo-cr-lwp">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="21.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="21"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Rcu-WW-GMM">
-                                                    <rect key="frame" x="20" y="0.0" width="45" height="21.5"/>
+                                                    <rect key="frame" x="20" y="0.0" width="45" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Age" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Fup-7i-eXE">
-                                                    <rect key="frame" x="364" y="0.0" width="30" height="21.5"/>
+                                                    <rect key="frame" x="364" y="0.0" width="30" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
@@ -175,7 +175,7 @@
         <!--Test Networking-->
         <scene sceneID="Wr1-Ue-1x8">
             <objects>
-                <tableViewController storyboardIdentifier="testNetworking" useStoryboardIdentifierAsRestorationIdentifier="YES" id="7ZA-LW-Xsj" customClass="TestNetworking" customModule="PlayGround" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController storyboardIdentifier="TestNetworking" useStoryboardIdentifierAsRestorationIdentifier="YES" id="7ZA-LW-Xsj" customClass="TestNetworking" customModule="PlayGround" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="8YB-Gy-idn">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -226,7 +226,6 @@
                         <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
                     </tabBar>
                     <connections>
-                        <segue destination="9pv-A4-QxB" kind="relationship" relationship="viewControllers" id="u7Y-xg-7CH"/>
                         <segue destination="Ttg-m9-VUA" kind="relationship" relationship="viewControllers" id="9WB-l7-eiJ"/>
                     </connections>
                 </tabBarController>
@@ -234,11 +233,11 @@
             </objects>
             <point key="canvasLocation" x="0.0" y="0.0"/>
         </scene>
-        <!--Item-->
+        <!--Items-->
         <scene sceneID="7qj-wJ-Oz1">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Ttg-m9-VUA" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item" id="qmG-So-c0J"/>
+                <navigationController storyboardIdentifier="ItemsViewController" automaticallyAdjustsScrollViewInsets="NO" useStoryboardIdentifierAsRestorationIdentifier="YES" id="Ttg-m9-VUA" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Items" id="qmG-So-c0J"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="uEF-sd-7mB">
                         <rect key="frame" x="0.0" y="44" width="414" height="44"/>
